--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -1,26 +1,449 @@
 {% extends 'edrar/edrar_base_template.html'%}
+{% load static %}
 {% block content %}
 <h3 class="mx-4 my-2">Add activity</h3>
-<form action="#"></form>
+<form id="activity-logger-form" action="{% url 'edrar_add' %}" method="POST">
     {% csrf_token %}
-    <div class="row m-3">
+
+    <div class="row mx-3 mt-3">
         <div class="col">
             <div class="form-group">
                 <label for="activity">Activity</label>
                 {{form.activity}}
             </div>
         </div>
+        <div class="col"></div>
+        <div class="col"></div>
+    </div>
+    <div class="row mx-3 mt-1">
         <div class="col">
             <div class="form-group">
-                <label for="siteid">Siteid</label>
+                <label for="siteid">Site</label>
                 {{form.siteid}}
             </div>
         </div>
-        <div class="col"></div>
+        <div class="col">
+            <label for="siteid">Site Name</label>
+            <p>BAGUMBONG</p>
+        </div>
+        <div class="col">
+            <!--<div class="form-group">
+                <label for="siteid">Siteid</label>
+                {{form2.siteid}}
+            </div>-->
+        </div>
     </div>
+
+    <hr>
+
+    <div class="row mx-3 mt-1">
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="device_name">Device name</label>
+                <div class="input-group">
+                    {{form.device_name}}
+                    <div class="input-group-append">
+                        <button id="device-search" class="btn btn-success" data-toggle="modal" data-target="#device-search-modal">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            {{form.tech}}
+            {{form.vendor}}
+            {{form.homing}}
+            {{form.equipment_type}}
+            {{form.bts_id}}
+        </div>
+    </div>
+
+    <div class="row mx-3 mt-1">
+        <div class="col">
+            <table id="device-selected-table" class="table table-striped table-bordered">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Device</th>
+                        <th>Site ID</th>
+                        <th>EMS ID</th>
+                        <th>Vendor</th>
+                        <th>Parent Device</th>
+                        <th>NE Type</th>
+                        <th>Subdomain</th>
+                        <th>Domain</th>
+                        <th>Model</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row mx-3 mt-1">
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="band">Band</label>
+                <div class="input-group">
+                    {{form.band}}
+                    <div class="input-group-append">
+                        <button id="cell-search" class="btn btn-success" data-toggle="modal" data-target="#cell-search-modal">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="trx_config">TRX Config</label>
+                {{form.trx_config}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="iub_type">IuB Type</label>
+                {{form.iub_type}}
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="bandwidth">Bandwidth</label>
+                {{form.bandwidth}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="omip">OMIP</label>
+                {{form.omip}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="lac">LAC</label>
+                {{form.lac}}
+            </div>
+        </div>
+        
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="sac">SAC</label>
+                {{form.sac}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="cell_id">Cell ID</label>
+                {{form.cell_id}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="cell_name">Cell Name</label>
+                {{form.cell_name}}
+            </div>
+        </div>
+        
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="sac">PCI</label>
+                {{form.pci}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="cell_id">S1_C</label>
+                {{form.s1_c}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="cell_name">S1_U</label>
+                {{form.s1_u}}
+            </div>
+        </div>
+    </div>
+    <div class="row mx-3 mt-1">
+        <div class="col">
+            <table id="table-placeholder-2" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Position</th>
+                        <th>Office</th>
+                        <th>Age</th>
+                        <th>Start date</th>
+                        <th>Salary</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Tiger Nixon</td>
+                        <td>System Architect</td>
+                        <td>Edinburgh</td>
+                        <td>61</td>
+                        <td>2011/04/25</td>
+                        <td>$320,800</td>
+                    </tr>
+                    <tr>
+                        <td>Garrett Winters</td>
+                        <td>Accountant</td>
+                        <td>Tokyo</td>
+                        <td>63</td>
+                        <td>2011/07/25</td>
+                        <td>$170,750</td>
+                    </tr>
+                    <tr>
+                        <td>Brielle Williamson</td>
+                        <td>Integration Specialist</td>
+                        <td>New York</td>
+                        <td>61</td>
+                        <td>2012/12/02</td>
+                        <td>$372,000</td>
+                    </tr>
+                    <tr>
+                        <td>Herrod Chandler</td>
+                        <td>Sales Assistant</td>
+                        <td>San Francisco</td>
+                        <td>59</td>
+                        <td>2012/08/06</td>
+                        <td>$137,500</td>
+                    </tr>
+                    <tr>
+                        <td>Rhona Davidson</td>
+                        <td>Integration Specialist</td>
+                        <td>Tokyo</td>
+                        <td>55</td>
+                        <td>2010/10/14</td>
+                        <td>$327,900</td>
+                    </tr>
+                    <tr>
+                        <td>Colleen Hurst</td>
+                        <td>Javascript Developer</td>
+                        <td>San Francisco</td>
+                        <td>39</td>
+                        <td>2009/09/15</td>
+                        <td>$205,500</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row mx-3 mt-1">
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="site_status">Site status</label>
+                {{form.site_status}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="user">Engineer</label>
+                {{form.user}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="counterpart">Counterpart</label>
+                {{form.counterpart}}
+            </div>
+        </div>
+    </div>
+
+    <div class="row mx-3 mt-1">
+        <div class="col">
+            <div class="form-group">
+                <label for="remarks">Remarks</label>
+                {{form.remarks}}
+            </div>
+        </div>
+    </div>
+
+    <div class="row mx-3 mt-1 mb-3">
+        <div class="col">
+            <button id="cancel-save-activity" class="btn btn-secondary btn-lg btn-block">Cancel</button>
+        </div>
+        <div class="col">
+            <button id="save-activity" class="btn btn-primary btn-lg btn-block">Save</button>
+        </div>
+    </div>
+    
 </form>
+
+<!-- Page Modals -->
+<!-- Device Search Modal-->
+<div id="device-search-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Search Device</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <ul class="nav nav-tabs" id="deviceTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="aid-device-tab" data-toggle="tab" href="#aid" role="tab" aria-controls="aid" aria-selected="true">AID</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="nms-device-tab" data-toggle="tab" href="#nms" role="tab" aria-controls="nms" aria-selected="false">NMS</a>
+                    </li>
+                </ul>
+                <div class="tab-content tabContent" id="deviceTabContent">
+                    <div class="tab-pane fade show active" id="aid-device" role="tabpanel" aria-labelledby="aid-tab">
+                        <div class="table-container">
+                            <table id="aid-device-search-table" class="table nowrap" style="width: 100%;">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th>Device</th>
+                                        <th>Site ID</th>
+                                        <th>EMS ID</th>
+                                        <th>Vendor</th>
+                                        <th>Parent Device</th>
+                                        <th>NE Type</th>
+                                        <th>Subdomain</th>
+                                        <th>Domain</th>
+                                        <th>Model</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-6">
+                                <p>Select device(s) that is/are part of activity being logged.</p>
+                            </div>
+                            <div class="col-6 text-right">
+                                <button id="aid-device-select-rows" class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nms-device" role="tabpanel" aria-labelledby="nms-tab">
+                        <div class="table-container">
+                            <table id="nms-device-search-table" class="table nowrap">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th>Device</th>
+                                        <th>Site ID</th>
+                                        <th>EMS ID</th>
+                                        <th>Vendor</th>
+                                        <th>Parent Device</th>
+                                        <th>NE Type</th>
+                                        <th>Subdomain</th>
+                                        <th>Domain</th>
+                                        <th>Model</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <div class="col text-right mt-3">
+                                <button id="nms-device-select-rows" class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End of Device Search Modal -->
+<!-- Cell Search Modal-->
+<div id="cell-search-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Search Device</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <ul class="nav nav-tabs" id="cellTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="aid-cell-tab" data-toggle="tab" href="#aid" role="tab" aria-controls="aid" aria-selected="true">AID</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="nms-cell-tab" data-toggle="tab" href="#nms" role="tab" aria-controls="nms" aria-selected="false">NMS</a>
+                    </li>
+                </ul>
+                <div class="tab-content tabContent" id="cellTabContent">
+                    <div class="tab-pane fade show active" id="aid-cell" role="tabpanel" aria-labelledby="aid-tab">
+                        <div class="table-container">
+                            <table id="aid-cell-search-table" class="table nowrap" style="width: 100%;">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th>Domain</th>
+                                        <th>Cell Name</th>
+                                        <th>Parent</th>
+                                        <th>Site ID</th>
+                                        <th>Tech</th>
+                                        <th>Band</th>
+                                        <th>NE Type</th>
+                                        <th>LAC/TAC</th>
+                                        <th>SAC/CI</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <div class="col text-right mt-3">
+                                <button id="aid-cell-select-rows" class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nms-cell" role="tabpanel" aria-labelledby="nms-tab">
+                        <div class="table-container">
+                            <table id="nms-cell-search-table" class="table nowrap">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th>Domain</th>
+                                        <th>Cell Name</th>
+                                        <th>Parent</th>
+                                        <th>Site ID</th>
+                                        <th>Tech</th>
+                                        <th>Band</th>
+                                        <th>NE Type</th>
+                                        <th>LAC/TAC</th>
+                                        <th>SAC/CI</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
 {% block customJs %}
-<script>
-</script>
+<script src="{% static 'edrar/js/add-activity.js' %}"></script>
+
 {% endblock customJs %}
