--- a/edrar/templates/edrar/edrar_base_template.html
+++ b/edrar/templates/edrar/edrar_base_template.html
@@ -21,8 +21,12 @@
     <!-- Custom styles for this template-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ttskch/select2-bootstrap4-theme@x.x.x/dist/select2-bootstrap4.min.css">
     <link href="{% static 'edrar/css/sb-admin-2.min.css' %}" rel="stylesheet">
     <link href="{% static 'edrar/css/navbar-top-fixed.css' %}" rel="stylesheet">
+    <link href="{% static 'edrar/css/custom.css' %}" rel="stylesheet">
 
 </head>
 
@@ -146,9 +150,10 @@
     <script src="{% static 'edrar/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="{% static 'edrar/js/sb-admin-2.min.js' %}"></script>
     {% block customJs %}
     {% endblock %}
