Added new tech model

--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -48,13 +48,41 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-8">
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="tech">Tech</label>
+                {{form.tech}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="vendor">Vendor</label>
+                {{form.vendor}}
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="homing">Homing</label>
+                {{form.homing}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label for="equipment_type">Equipment type</label>
+                {{form.equipment_type}}
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <!-- BLANK FOR NOW -->
+        </div>
+        <!-- <div class="col-sm-8">
             {{form.tech}}
             {{form.vendor}}
             {{form.homing}}
             {{form.equipment_type}}
             {{form.bts_id}}
-        </div>
+        </div> -->
     </div>
 
     <div class="row mx-3 mt-1">
