--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="col">
-            <label for="siteid">Site Name</label>
+            <label for="tech">Tech</label>
             <p>BAGUMBONG</p>
         </div>
         <div class="col">
