--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -23,14 +23,16 @@
             </div>
         </div>
         <div class="col">
-            <label for="tech">Tech</label>
-            <p>BAGUMBONG</p>
+            <div class="form-group">
+                <label for="tech">Tech</label>
+                {{form.tech}}
+            </div>
         </div>
         <div class="col">
-            <!--<div class="form-group">
-                <label for="siteid">Siteid</label>
-                {{form2.siteid}}
-            </div>-->
+            <div class="form-group">
+                <label for="band">Band</label>
+                {{form.band}}
+            </div>
         </div>
     </div>
 
@@ -46,12 +48,6 @@
                         <button id="device-search" class="btn btn-success" data-toggle="modal" data-target="#device-search-modal">Search</button>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="tech">Tech</label>
-                {{form.tech}}
             </div>
         </div>
         <div class="col-sm-4">
