--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -6,29 +6,27 @@
     {% csrf_token %}
 
     <div class="row mx-3 mt-3">
-        <div class="col">
+        <div class="col-sm-3">
             <div class="form-group">
                 <label for="activity">Activity</label>
                 {{form.activity}}
             </div>
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
     </div>
     <div class="row mx-3 mt-1">
-        <div class="col">
+        <div class="col-sm-3">
             <div class="form-group">
                 <label for="siteid">Site</label>
                 {{form.siteid}}
             </div>
         </div>
-        <div class="col">
+        <div class="col-sm-3">
             <div class="form-group">
                 <label for="tech">Tech</label>
                 {{form.tech}}
             </div>
         </div>
-        <div class="col">
+        <div class="col-sm-3">
             <div class="form-group">
                 <label for="band">Band</label>
                 {{form.band}}
@@ -38,62 +36,21 @@
 
     <hr>
 
-    <div class="row mx-3 mt-1">
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="device_name">Device name</label>
-                <div class="input-group">
-                    {{form.device_name}}
-                    <div class="input-group-append">
-                        <button id="device-search" class="btn btn-success" data-toggle="modal" data-target="#device-search-modal">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="vendor">Vendor</label>
-                {{form.vendor}}
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="homing">Homing</label>
-                {{form.homing}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="equipment_type">Equipment type</label>
-                {{form.equipment_type}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <!-- BLANK FOR NOW -->
-        </div>
-        <!-- <div class="col-sm-8">
-            {{form.tech}}
-            {{form.vendor}}
-            {{form.homing}}
-            {{form.equipment_type}}
-            {{form.bts_id}}
-        </div> -->
-    </div>
-
-    <div class="row mx-3 mt-1">
-        <div class="col">
-            <table id="device-selected-table" class="table table-striped table-bordered">
+    <div id="filtered-device-table-container" class="row mx-3 mt-1 datatable-container">
+        <h5>Asset Inventory Device Data</h5>
+        <div class="col-lg-12">
+            <table id="filtered-device-table" class="table nowrap" style="width: 100%;">
                 <thead class="thead-light">
                     <tr>
+                        <th>EMS ID</th>
                         <th>Device</th>
                         <th>Site ID</th>
-                        <th>EMS ID</th>
                         <th>Vendor</th>
                         <th>Parent Device</th>
                         <th>NE Type</th>
                         <th>Subdomain</th>
                         <th>Domain</th>
+                        <!-- Hidden fields for form fields reference-->
                         <th>Model</th>
                     </tr>
                 </thead>
@@ -105,173 +62,162 @@
         </div>
     </div>
 
-    <hr>
+    <hr id="filtered-device-table-separator" class="dt-separator">
 
-    <div class="row mx-3 mt-1">
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="band">Band</label>
-                <div class="input-group">
-                    {{form.band}}
-                    <div class="input-group-append">
-                        <button id="cell-search" class="btn btn-success" data-toggle="modal" data-target="#cell-search-modal">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="trx_config">TRX Config</label>
-                {{form.trx_config}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="iub_type">IuB Type</label>
-                {{form.iub_type}}
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="bandwidth">Bandwidth</label>
-                {{form.bandwidth}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="omip">OMIP</label>
-                {{form.omip}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="lac">LAC</label>
-                {{form.lac}}
-            </div>
-        </div>
-        
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="sac">SAC</label>
-                {{form.sac}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="cell_id">Cell ID</label>
-                {{form.cell_id}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="cell_name">Cell Name</label>
-                {{form.cell_name}}
-            </div>
-        </div>
-        
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="sac">PCI</label>
-                {{form.pci}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="cell_id">S1_C</label>
-                {{form.s1_c}}
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label for="cell_name">S1_U</label>
-                {{form.s1_u}}
-            </div>
-        </div>
-    </div>
-    <div class="row mx-3 mt-1">
-        <div class="col">
-            <table id="table-placeholder-2" class="table table-striped table-bordered">
-                <thead>
+    <div id="filtered-cell-table-container" class="row mx-3 mt-1 datatable-container">
+        <h5>Asset Inventory Cell Data</h5>
+        <div class="col-lg-12">
+            <table id="filtered-cell-table" class="table nowrap" style="width: 100%;">
+                <thead class="thead-light">
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>Domain</th>
+                        <th>EMS ID</th>
+                        <th>BTS ID</th>
+                        <th>Cell Name</th>
+                        <th>Parent</th>
+                        <th>Site ID</th>
+                        <th>Tech</th>
+                        <th>Band</th>
+                        <th>NE Type</th>
+                        <th>LAC/TAC</th>
+                        <th>SAC/CI</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
-                    </tr>
-                    <tr>
-                        <td>Garrett Winters</td>
-                        <td>Accountant</td>
-                        <td>Tokyo</td>
-                        <td>63</td>
-                        <td>2011/07/25</td>
-                        <td>$170,750</td>
-                    </tr>
-                    <tr>
-                        <td>Brielle Williamson</td>
-                        <td>Integration Specialist</td>
-                        <td>New York</td>
-                        <td>61</td>
-                        <td>2012/12/02</td>
-                        <td>$372,000</td>
-                    </tr>
-                    <tr>
-                        <td>Herrod Chandler</td>
-                        <td>Sales Assistant</td>
-                        <td>San Francisco</td>
-                        <td>59</td>
-                        <td>2012/08/06</td>
-                        <td>$137,500</td>
-                    </tr>
-                    <tr>
-                        <td>Rhona Davidson</td>
-                        <td>Integration Specialist</td>
-                        <td>Tokyo</td>
-                        <td>55</td>
-                        <td>2010/10/14</td>
-                        <td>$327,900</td>
-                    </tr>
-                    <tr>
-                        <td>Colleen Hurst</td>
-                        <td>Javascript Developer</td>
-                        <td>San Francisco</td>
-                        <td>39</td>
-                        <td>2009/09/15</td>
-                        <td>$205,500</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
 
+    <hr id="filtered-cell-table-separator" class="dt-separator">
+
+    <div class="row mx-3 mt-1">
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="device_name">Device name</label>
+                {{form.device_name}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="vendor">Vendor</label>
+                {{form.vendor}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="homing">Homing</label>
+                {{form.homing}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="equipment_type">Equipment type</label>
+                {{form.equipment_type}}
+            </div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="row mx-3 mt-1">
-        <div class="col-sm-4">
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="bts_id">BTS ID</label>
+                {{form.bts_id}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="cell_name">Cell Name</label>
+                {{form.cell_name}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="cell_id">Cell ID</label>
+                {{form.cell_id}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="iub_type">IuB Type</label>
+                {{form.iub_type}}
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="bandwidth">Bandwidth</label>
+                {{form.bandwidth}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="omip">OMIP</label>
+                {{form.omip}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="lac">LAC</label>
+                {{form.lac}}
+            </div>
+        </div>
+        
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="sac">SAC</label>
+                {{form.sac}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="trx_config">TRX Config</label>
+                {{form.trx_config}}
+            </div>
+        </div>
+        
+        
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="sac">PCI</label>
+                {{form.pci}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="cell_id">S1_C</label>
+                {{form.s1_c}}
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label for="cell_name">S1_U</label>
+                {{form.s1_u}}
+            </div>
+        </div>
+    </div>
+    
+
+    <hr>
+
+    <div class="row mx-3 mt-1">
+        <div class="col-sm-3">
             <div class="form-group">
                 <label for="site_status">Site status</label>
                 {{form.site_status}}
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="form-group">
                 <label for="user">Engineer</label>
                 {{form.user}}
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="form-group">
                 <label for="counterpart">Counterpart</label>
                 {{form.counterpart}}
