--- a/edrar/templates/edrar/edrar_base_template.html
+++ b/edrar/templates/edrar/edrar_base_template.html
@@ -62,7 +62,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item dropdown no-arrow">
                                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="mr-2 d-none d-lg-inline">Douglas McGee</span>
+                                    <span id="user-name" class="mr-2 d-none d-lg-inline">{{ user.username }}</span>
                                     <img class="img-profile rounded-circle" src="{%static 'edrar/img/undraw_profile.svg' %}">
                                 </a>
                                 <!-- Dropdown - User Information -->
@@ -136,7 +136,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
                 </div>
             </div>
         </div>
