UI Async JS revision on loading data.

--- a/edrar/templates/edrar/activity_add.html
+++ b/edrar/templates/edrar/activity_add.html
@@ -367,6 +367,8 @@
 <!-- End of No TRX Found Modal -->
 {% endblock content %}
 {% block customJs %}
+<script src="{% static 'edrar/js/global.js' %}"></script>
+<script src="{% static 'edrar/js/page-datatable.js' %}"></script>
 <script src="{% static 'edrar/js/add-activity.js' %}"></script>
 <script src="{% static 'edrar/js/post-activity.js' %}"></script>
 {% endblock customJs %}
